add conditionals to css

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
 <div class="container">
-<h2> Maintaining File System Consistency </h2>
-<h3 style="line-height:0em"> with our friends fsck and journaling </h3>
+<h2 style="margin-bottom:0;padding-bottom:0"> Maintaining File System Consistency </h2>
+<h3 style="margin-top:0;padding-top:0"> with our friends fsck and journaling </h3>
 <hr style="margin:2em 0 1em 0;width:70%;text-align:center">
 <p> We generally assume that computers are reliable, and that our data will persist despite a crash or sudden loss of power. This is called “consistency”—every part of our file system should reference the data that we expect it to.</p>
 
